# dream-ini

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
.stroggforge/: cargo-build-args.sh
Dream INI/: mux_lang.ini  mux_launch.sh
benches/: round_trip.rs
scripts/: check-raster-stats-schema.py
scripts/tools/: analyze_portmaster_renderer_log.py
src/: cli.rs  command.rs  content_files.rs  desktop_entry.rs  events.rs  fallback_keys.rs  generated.rs  importer.rs  lib.rs  lib_tests.rs  lua.rs  main.rs  openmw_cfg.rs  parser.rs  test_support.rs  warnings.rs
src/command/: tests.rs
src/gui/: file_picker.rs  form_nav.rs  form_state.rs  localization.rs  mod.rs  osk.rs  path_helpers.rs  path_widgets.rs  portmaster.rs  result_panels.rs  scroll.rs
src/gui/controller/: backend.rs  common.rs  gilrs_backend.rs  linux.rs  mod.rs
src/gui/localization/: english.rs  french.rs  german.rs  russian.rs  spanish.rs  swedish.rs
src/gui/portmaster/: fbdev.rs  log.rs  mod.rs  pacing.rs  raster.rs  render_benchmark.rs  renderer.rs  shell.rs  surface.rs  texture.rs
src/gui/portmaster/raster/: coverage.rs  fan.rs  math.rs  quad.rs  sampling.rs  solid.rs  stats.rs  textured.rs  triangle.rs  types.rs
src/gui/portmaster/renderer/: fan.rs  quad.rs  stats.rs
src/lib_tests/: content_files.rs  importer.rs  parser.rs  plugin.rs
src/plugin/: load_order.rs  mod.rs  tes3.rs
tests/: cli.rs
