[package]
name = "dream-ini"
version = "0.1.0"
edition = "2024"
description = "Import Morrowind.ini settings into OpenMW configuration files"
license = "GPL-3.0-only"
readme = "README.md"
keywords = ["openmw", "morrowind", "ini", "config"]
categories = ["command-line-utilities", "config"]

[dependencies]
clap_complete = "4"
clap_mangen = "0.3"
clap = { version = "4", features = ["derive"] }
encoding_rs = "0.8"
eframe = { version = "0.34", optional = true, default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui = { version = "0.34", optional = true }
image = { version = "0.25", optional = true, default-features = false, features = ["png"] }
miniquad = { version = "0.4.8", optional = true }
mlua = { version = "0.11", optional = true, features = ["luajit52", "vendored"] }
openmw-config = "1.0.5"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = ["Win32_System_Com", "Win32_UI_Shell"] }

[target.'cfg(target_os = "linux")'.dependencies]
libc = { version = "0.2", optional = true }

[target.'cfg(any(target_os = "windows", target_os = "macos"))'.dependencies]
gilrs = { version = "0.11", optional = true }

[features]
default = ["gui"]
controller-support = ["dep:gilrs", "dep:libc"]
gui = ["dep:eframe", "dep:egui", "dep:image", "controller-support"]
lua = ["dep:mlua"]
portmaster-gui = ["dep:egui", "dep:miniquad", "controller-support"]

[dev-dependencies]
criterion = "0.8"

[[bench]]
name = "round_trip"
harness = false
